--- a/lcl-galaxy-springmvc-demo/pom.xml
+++ b/lcl-galaxy-springmvc-demo/pom.xml
@@ -173,6 +173,13 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <resources>
