--- a/lcl-galaxy-springmvc-demo/pom.xml
+++ b/lcl-galaxy-springmvc-demo/pom.xml
@@ -180,6 +180,12 @@
             <version>1.16.20</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
