--- a/lcl-galaxy-springmvc-demo/pom.xml
+++ b/lcl-galaxy-springmvc-demo/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lcl.galaxy</groupId>
-    <artifactId>spring-mvc-demo</artifactId>
+    <artifactId>lcl-galaxy-springmvc-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
