--- a/lcl-galaxy-design-pattern/pom.xml
+++ b/lcl-galaxy-design-pattern/pom.xml
@@ -38,6 +38,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
+
 
     </dependencies>
 
