--- a/lcl-galaxy-spring/pom.xml
+++ b/lcl-galaxy-spring/pom.xml
@@ -42,6 +42,21 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- dbcp数据库连接池 -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
+
 
 
 
