--- a/lcl-galaxy-springmvc-frame/pom.xml
+++ b/lcl-galaxy-springmvc-frame/pom.xml
@@ -206,6 +206,12 @@
             <version>2.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.lcl.galaxy</groupId>
+            <artifactId>lcl-galaxy-spring</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
     <build>
