--- a/lcl-galaxy-springmvc-frame/src/main/webapp/WEB-INF/web.xml
+++ b/lcl-galaxy-springmvc-frame/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,14 @@
         <servlet-name>MyServlet</servlet-name>
         <url-pattern>/MyServlet</url-pattern>
     </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>MyDispatcherServlet</servlet-name>
+        <servlet-class>com.lcl.galaxy.springmvc.frame.servlet.MyDispatcherServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MyDispatcherServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
