--- a/lcl-galaxy-springmvc-frame/pom.xml
+++ b/lcl-galaxy-springmvc-frame/pom.xml
@@ -11,6 +11,8 @@
 
 
     <dependencies> <!-- spring MVC依赖包 -->
+
+
         <!-- 持久层依赖 开始 -->
         <!-- spring ioc组件需要的依赖包 -->
         <dependency>
@@ -181,12 +183,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-
         <!-- spring 单元测试组件包 -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -207,9 +203,24 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lcl.galaxy</groupId>
-            <artifactId>lcl-galaxy-spring</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- dbcp数据库连接池 -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
         </dependency>
 
 
