--- a/lcl-galaxy-springmvc-frame/src/main/webapp/WEB-INF/web.xml
+++ b/lcl-galaxy-springmvc-frame/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
         <servlet-class>com.lcl.galaxy.springmvc.frame.dispatcher.MyDispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:springmvc.xml</param-value>
+            <param-value>springmvc.xml</param-value>
         </init-param>
         <load-on-startup>2</load-on-startup>
     </servlet>
