--- a/lcl-galaxy-springmvc-frame/pom.xml
+++ b/lcl-galaxy-springmvc-frame/pom.xml
@@ -234,6 +234,12 @@
                 </includes>
                 <filtering>false</filtering>
             </resource>
+                <resource>
+                    <directory>src/main/resources</directory>
+                    <includes>
+                        <include>**</include>
+                    </includes>
+                </resource>
         </resources>
         <plugins>
             <!-- 配置Maven的JDK编译级别 -->
