--- a/lcl-galaxy-springmvc-frame/pom.xml
+++ b/lcl-galaxy-springmvc-frame/pom.xml
@@ -223,6 +223,13 @@
             <version>1.6.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
+
 
     </dependencies>
     <build>
@@ -251,6 +258,10 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
+                    <!--通过反射获取参数时，需要设置以下参数才有意义，否则返回的就是arg0，arg1这样的参数名称-->
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
