--- a/lcl-galaxy-redis/pom.xml
+++ b/lcl-galaxy-redis/pom.xml
@@ -66,6 +66,19 @@
             <artifactId>json-smart</artifactId>
         </dependency>
 
+        <!--guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
