--- a/lcl-galaxy-es/pom.xml
+++ b/lcl-galaxy-es/pom.xml
@@ -15,7 +15,7 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
-        <elasticsearch.version>6.4.1</elasticsearch.version>
+        <elasticsearch.version>6.3.2</elasticsearch.version>
         <spring.data.elasticsearch.version>3.1.0.RELEASE</spring.data.elasticsearch.version>
     </properties>
     <dependencies>
@@ -50,6 +50,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
+
+        <!--  es升级需要依赖的 -->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
+
 
 
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
