--- a/lcl-galaxy-zookeeper/pom.xml
+++ b/lcl-galaxy-zookeeper/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>zkclient</artifactId>
             <version>0.10</version>
         </dependency>
+
+        <!--curator 依赖-->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
