--- a/lcl-galaxy-mysql/pom.xml
+++ b/lcl-galaxy-mysql/pom.xml
@@ -58,6 +58,12 @@
             <version>4.0.0-RC2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+
         <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
