--- a/lcl-galaxy-mysql/src/main/resources/application.yml
+++ b/lcl-galaxy-mysql/src/main/resources/application.yml
@@ -4,47 +4,59 @@ mybatis:
 spring:
   datasource:
     url: jdbc:mysql://192.168.1.104:3306/lcltest?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
-  #ÓÃ»§ÃûÃÜÂë
+  # ç”¨æˆ·åå¯†ç 
     username: root
     password: root
-  #Êı¾İ¿âÇı¶¯
-  #´ËÌÇı¶¯ÓĞÁ½¸ö
-  #com.mysql.jdbc.Driver
-  #com.mysql.cj.jdbc.Driver
-  #MySQL5ÓÃµÄÇı¶¯urlÊÇcom.mysql.jdbc.Driver£¬MySQL6ÒÔºóÓÃµÄÊÇcom.mysql.cj.jdbc.Driver¡£
-  #Ê¹ÓÃºÎÖÖÇı¶¯£¬¸ù¾İ°²×°MySQLµÄ°æ±¾¶ø¶¨
+  # æ•°æ®åº“é©±åŠ¨
+  # æ­¤å¤„é©±åŠ¨æœ‰ä¸¤ä¸ª
+  # com.mysql.jdbc.Driver
+  # com.mysql.cj.jdbc.Driver
+  # MySQL5ç”¨çš„é©±åŠ¨urlæ˜¯com.mysql.jdbc.Driverï¼ŒMySQL6ä»¥åç”¨çš„æ˜¯com.mysql.cj.jdbc.Driverã€‚
+  # ä½¿ç”¨ä½•ç§é©±åŠ¨ï¼Œæ ¹æ®å®‰è£…MySQLçš„ç‰ˆæœ¬è€Œå®š
     driver-class-name: com.mysql.cj.jdbc.Driver
   main:
     allow-bean-definition-overriding: true
   shardingsphere:
     datasource:
       names:
-        lcl104,lcl106
-      # Ö÷Êı¾İÔ´
-      lcl104:
+        lcl130,lcl131,lcl132,lcl133
+      # ä¸»æ•°æ®æº
+      lcl130:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.1.104:3306/lcltest?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
+        url: jdbc:mysql://192.168.249.130:3306/test001?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
         username: root
         password: root
-      # ´ÓÊı¾İÔ´
-      lcl106:
+      # ä»æ•°æ®æº
+      lcl131:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.1.106:3306/lcltest?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
+        url: jdbc:mysql://192.168.249.131:3306/test001?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
+        username: root
+        password: root
+      lcl132:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://192.168.249.132:3306/test001?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
+        username: root
+        password: root
+      lcl133:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://192.168.249.133:3306/test001?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
         username: root
         password: root
     masterslave:
-      # ¶ÁĞ´·ÖÀëÅäÖÃ
+      # è¯»å†™åˆ†ç¦»é…ç½®
       load-balance-algorithm-type: round_robin
-      # ×îÖÕµÄÊı¾İÔ´Ãû³Æ
+      # æœ€ç»ˆçš„æ•°æ®æºåç§°
       name: dataSource
-      # Ö÷¿âÊı¾İÔ´Ãû³Æ
-      master-data-source-name: lcl104
-      # ´Ó¿âÊı¾İÔ´Ãû³ÆÁĞ±í£¬¶à¸ö¶ººÅ·Ö¸ô
-      slave-data-source-names: lcl106
+      # ä¸»æ•°æ®æºåç§°
+      master-data-source-name: lcl130
+      # ä»åº“æ•°æ®æºåç§°åˆ—è¡¨ï¼Œå¤šä¸ªé€—å·åˆ†éš”
+      slave-data-source-names: lcl131,lcl132,lcl133
     props:
-      # ¿ªÆôSQLÏÔÊ¾£¬Ä¬ÈÏfalse
+      # å¼€å¯SQLæ˜¾ç¤ºï¼Œé»˜è®¤false
       sql:
         show: true
 
