--- a/lcl-galaxy-rpc/pom.xml
+++ b/lcl-galaxy-rpc/pom.xml
@@ -17,6 +17,12 @@
             <version>1.18.16</version>
             <optional>true</optional>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.65.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
